# sinatra-calc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  SECURITY.md  app.rb  helpers.rb  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
controllers/: adv_calc.rb  bmi.rb  calc.rb  mortgagr.rb  trippr.rb
migrations/: 0001_init.sql
public/css/: style.css
public/js/: app.js
src/: cli.rs  db.rs  lib.rs  main.rs  model.rs  state.rs  tools.rs
tests/: cli.rs  e2e.rs  state.rs
tests/artifacts/: e2e_geocode_paris.stdout.txt  e2e_output.csv
tests/fixtures/: sample.csv
views/: layout.erb
views/pages/: adv_calc.erb  bmi.erb  calc.erb  mortgagr.erb  trippr.erb
views/static/: about.erb  home.erb
