[package]
name = "mater"
version = "0.1.0"
edition = "2024"
default-run = "mater"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
sqlx = { version = "0.8", features = ["sqlite", "chrono", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
csv = "1.2"
serde_yaml = "0.9"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

