[package]
name = "geo"
version = "0.1.0"
edition = "2021"
default-run = "geo"
description = "CLI tool for geolocation lookups and CSV geocoding via OpenStreetMap Nominatim"
license = "MIT"
repository = "https://github.com/charlesponti/geo"
readme = "README.md"
keywords = ["cli", "geocoding", "csv", "nominatim"]
categories = ["command-line-utilities", "data-structures"]
authors = ["Charles Ponti"]

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
httpmock = "0.8"
serde_json = "1"
